dodata forma za objekte